Added store, functionality to upload files and added monaco editor

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" }
             ],
             "styles": [
               "src/styles.scss"
@@ -145,6 +146,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "jsondiff"
+    }
+  },
+  "defaultProject": "jsondiff",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
